[package]
name = "haphazard"
version = "0.1.4"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
license = "Apache-2.0"

description = "Dynamic memory management for lock-free data structures using hazard pointers."
repository = "https://github.com/jonhoo/haphazard.git"

keywords = ["hazard-pointers", "no_std", "garbage-collection", "reclamation"]
categories = ["concurrency", "memory-management", "no-std"]

[features]
std = []

default = ["std"]

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = "0.5.5"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "folly"
harness = false
