[package]
name = "haphazard"
version = "0.1.8"
authors = ["Jon Gjengset <jon@thesquareplanet.com>"]
edition = "2021"
license = "Apache-2.0"
rust-version = "1.60.0"

description = "Dynamic memory management for lock-free data structures using hazard pointers."
repository = "https://github.com/jonhoo/haphazard.git"

keywords = ["hazard-pointers", "no_std", "garbage-collection", "reclamation"]
categories = ["concurrency", "memory-management", "no-std"]

[features]
std = []

default = ["std"]

[dependencies]

[target.'cfg(loom)'.dependencies]
loom = "0.7.1"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

# for -Zminimal-versions
[target.'cfg(any())'.dependencies]
regex = { version = "1.6", optional = true }
serde = { version = "1.0.100", optional = true }

[lib]
bench = false

[[bench]]
name = "folly"
harness = false
